Test/8-35_cluster.clu
Cluster size 8
Cluster number 350108       # E:      Factor:7  P:  , Ori size:8    Sub:8    From:35          
   8    35    fam_8_1           2-135      1   leng: 133
   8    35    fam_8_2           4-136      1   leng: 132
   8    35    fam_8_3           2-135      1   leng: 133
   8    35    fam_8_4           4-138      1   leng: 134
   8    35    fam_8_5           4-133      1   leng: 129
   8    35    fam_8_6           4-138      1   leng: 134
   8    35    fam_8_7           1-124      1   leng: 123
   8    35    fam_8_8           2-124      1   leng: 122
